<resources>
    <string name="app_name">ChatHub</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="sign_in">Sign In</string>
    <string name="preferences_menu_label">Preferences</string>
    <string name="auto_palette_preference">autoPalette</string>
    <string name="color_scheme_preference">colorScheme</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="send">Send</string>
    <string name="newdrawing">New drawing</string>
    <string name="alert_message">Start new drawing (you will lose the current drawing)?</string>
</resources>
